refactor chart and remove exporting feature
