# internal/model/auth.go
@@ -10,8 +10,3 @@ type Token struct {
 type UploadToken struct {
 	UploadToken string `json:"upload_token"`
 }
-
-// UploadFileResponse represents the response for file upload
-type UploadFileResponse struct {
-	Filename string `json:"filename"`
-}
