# internal/model/request/song.go
@@ -5,12 +5,12 @@ import "paradigm-reboot-prober-go/internal/model"
 // CreateSongRequest represents the request to create a new song
 type CreateSongRequest struct {
 	model.SongBase
-	Levels []model.LevelInfo `json:"levels"`
+	Charts []model.ChartInput `json:"charts"`
 }
 
 // UpdateSongRequest represents the request to update an existing song
 type UpdateSongRequest struct {
 	SongID int `json:"song_id" binding:"required"`
 	model.SongBase
-	Levels []model.LevelInfo `json:"levels"`
+	Charts []model.ChartInput `json:"charts"`
 }
